# SAMO--DL

./: .bandit  .changed_files.txt  .coverage  .coveragerc  .deepsource.toml  .deepsource.yaml  .dockerignore  .env  .env.template  .file_list.txt  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage.txt  .gitmodules  .pre-commit-config.yaml  .pre-commit-exclude-patterns.yaml  .pylintrc  .ruff_summary.md  .safety-policy.yml  .safety-project.ini  .secrets.baseline  .surgical_breakdown_progress.json  CHANGELOG.md  CODE_QUALITY_QUICK_REFERENCE.md  CODE_QUALITY_README.md  CODE_REVIEW_IMPROVEMENTS.md  COMPREHENSIVE_API_TEST_REPORT.md  COMPREHENSIVE_PROJECT_STATUS_2025-01-03.md  CONTRIBUTING.md  DEBERTA_DEPLOYMENT_README.md  DEBERTA_INTEGRATION_CODE_REVIEW_FIXES.md  DEEPSOURCE_AUDIT.md  DEPLOYMENT_FIXES_GUIDE.md  DEPLOY_UNIFIED_API.md  DS_AUDIT2.md  Dockerfile  Dockerfile.fixed  Dockerfile.minimal  (+104 more)
.circleci/: activate_conda.sh  config.yml  security-quality.yml  setup_conda.sh
.logs/: code_quality_report.md  repo_inventory.json
configs/: .coveragerc  .pre-commit-config.yaml  .safety-project.ini  development.yaml  environment.yml  monitoring.yaml  repo_inventory.json  samo_api_config.yaml  samo_emotion_detection_config.yaml  samo_t5_config.yaml  samo_whisper_config.yaml  security.yaml  whisper_config.yaml
data/: cmu_mosei_balanced_dataset.json  cmu_mosei_emotion_dataset.json  expanded_journal_dataset.json  journal_test_dataset.json  journal_test_dataset_summary.json  unique_fallback_dataset.json
dependencies/: README.md  constraints.txt  requirements-api.txt  requirements-audio.txt  requirements-dev.txt  requirements-ml.txt  requirements-unified.txt  requirements.txt  requirements_deployment.txt  requirements_gcp.txt  requirements_minimal.txt  requirements_onnx.txt  requirements_production.txt  requirements_secure.txt  requirements_unified.txt
deployment/: .env.flask.example  CUSTOM_MODEL_DEPLOYMENT_GUIDE.md  DOCKERFILE_SECURITY_GUIDE.md  HUGGINGFACE_DEPLOYMENT_CHECKLIST.md  README-requirements.md  README.md  __init__.py  api_server.py  deploy.sh  flexible_api_server.py  inference.py  mcp_server.py  model  requirements-core.txt  requirements.txt  secure_api_server.py  test_examples.py
deprecated/: bandit-report.json
docker/: Dockerfile.prod  vertex_ai_training.Dockerfile
docs/: .code-review.md  0.0000_loss_debugging_plan.md  API_DOCUMENTATION.md  CIRCLE_CI_ERRORS_FIXED.md  CI_FIXES_SUMMARY.md  CI_FIXES_SUMMARY_UPDATED.md  CI_ISSUES_FIXED.md  CI_TRIGGER.md  CODE_REVIEW_RESPONSE.md  CODE_STANDARDS.md  COLAB_TROUBLESHOOTING.md  CRITICAL_CI_FIXES_APPLIED.md  DEPLOYMENT_GUIDE.md  FINAL_STATUS_SUMMARY.md  GCP_DEPLOYMENT_GUIDE.md  GRADIENT_WORKFLOW_SETUP.md  MONITORING_PLAYBOOK.md  NEXT_STEPS_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PR_BREAKDOWN_STRATEGY.md  REVIEW_COMMENTS_FIXES_SUMMARY.md  ROOT_CAUSE_ANALYSIS_COMPLETE.md  SAMO-DL-PRD.md  SUPER_SIMPLE_COLAB_GUIDE.md  TESTING_STRATEGY.md  USER_GUIDE.md  api-rate-limiter-fix-summary.md  api_specification.md  architecture-decision-onnx-production.md  ci-fixes-summary.md  circleci-debug-prompt.md  circleci-fix-summary.md  circleci-guide.md  cleanup-inventory.md  cleanup-success.md  cleanup-summary.md  cloud-run-deployment-analysis.md  cloud-run-deployment-guide.md  cloud-run-deployment-success-summary.md  cloud-run-model-loading-fix-guide.md  (+53 more)
local_deployment/: api_server.py  requirements.txt  start.sh
logs/: model_metrics.json
notebooks/: COMPREHENSIVE_ULTIMATE_TRAINING_COLAB.ipynb  FIXED_BULLETPROOF_COMBINED_TRAINING_COLAB.ipynb  FIXED_SPECIALIZED_TRAINING.ipynb  Getting_started_with_google_colab_ai.ipynb  MINIMAL_WORKING_TRAINING_COLAB.ipynb  README.md  data_pipeline_demo.ipynb  domain_adaptation_gpu_training.ipynb  domain_adaptation_gpu_training_robust.ipynb  domain_adaptation_working.ipynb  expanded_dataset_training.ipynb  expanded_dataset_training_ultimate.ipynb
prisma/: README.md  schema.prisma
requirements/: base.txt  constraints.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt
results/: focal_training_results.json  simple_training_results.json
scripts/: README_CALIBRATION.md  README_OPTIMIZATION.md  README_WHISPER.md  __init__.py  add_wandb_setup.py  basic_environment_test.py  bootstrap.py  bulletproof_training.py  calibrate_model.py  check-repo-health.sh  check_environment.sh  check_pr_scope.py  cleanup-branches.sh  cleanup_old_images.sh  complete_simple_notebook.py  comprehensive_domain_adaptation_training.py  compress_model.py  convert_to_onnx.py  convert_to_onnx.py.backup  create_bulletproof_cell.py  create_bulletproof_colab_notebook.py  create_colab_expanded_training.py  create_corrected_specialized_notebook.py  create_emotion_specialized_notebook.py  create_fixed_bulletproof_notebook.py  create_fixed_colab_notebook.py  create_fixed_notebook.py  create_fixed_specialized_training_notebook.py  create_focused_prs.sh  create_gpu_instance.sh  create_gpu_instance_fixed.sh  create_journal_test_dataset.py  create_model_ensemble_notebook.py  create_test_dataset.py  create_test_dataset.py.backup  create_ultimate_bulletproof_notebook.py  debug_calibration.py  debug_checkpoint.py  debug_checkpoint.py.backup  debug_dataset_structure.py  (+190 more)
src/: __init__.py  api_documentation.py  api_examples.py  api_rate_limiter.py  auth.py  basic_api.py  complete_analysis_endpoint.py  constants.py  emotion_endpoint.py  health_endpoints.py  health_monitor.py  input_sanitizer.py  logging_config.py  minimal_unified_api.py  rate_limiter.py  security_headers.py  security_setup.py  simple_api.py  startup_api.py  summarize_endpoint.py  transcribe_endpoint.py  unified_ai_api.py  unified_api_server.py  utils.py
test_reports/: cloud_run_api_test_results.json  mega_comprehensive_test_report_20250805_141116.json
tests/: .CODE--REVIEW.md  .DEEPSOURCE.md  __init__.py  __init__.py.backup  conftest.py  pytest.ini  requirements-test-utils.txt  test_api_integration.py  test_complete_analysis_endpoint.py  test_complete_api.py  test_emotion_endpoint.py  test_health_monitor.py  test_model_integration.py  (+5 more)
(+848 files in other folders)
