[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "samo-dl"
version = "1.0.0b1"
description = "SAMO Deep Learning - Voice-First AI API"
authors = [
    {name = "SAMO Team", email = "team@samo.ai"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # API Framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.11.7,<3.0.0",
    "PyJWT>=2.8.0,<3.0.0",

    # Database & Storage
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "redis>=4.6.0",

    # Utilities
    "python-dotenv>=1.1.1,<2.0.0",
    "pyyaml>=6.0",
    "requests==2.32.4",
    "certifi>=2025.7.14,<2026.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.24.0",  # For FastAPI testing
    "coverage[toml]>=7.2.0",
    "factory-boy>=3.3.0",  # For test data generation
]
dev = [
    "ruff>=0.0.280",
    "mypy>=1.7.1",
    "bandit[toml]>=1.7.6",
    # safety removed - kept optional in CI to avoid resolver backtracking
    "pre-commit>=3.5.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
]

[project.scripts]
samo-train = "training.cli:main"
samo-api = "unified_ai_api:main"

[project.urls]
"Homepage" = "https://github.com/samo-ai/samo-dl"
"Bug Reports" = "https://github.com/samo-ai/samo-dl/issues"
"Source" = "https://github.com/samo-ai/samo-dl"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# Enable pycodestyle, Pyflakes, and additional useful rules
select = ["E", "F", "B", "C4", "UP"]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
# Allow imports to be at the top level in __init__.py files
"__init__.py" = ["F401"]
# Tests can use assertions and magic values
"tests/**/*" = ["S101", "PLR2004"]
# Scripts can use print statements and complex logic
"scripts/**/*" = ["T201", "PLR0915", "PLR0912"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument (legitimate in interface implementations)
    "C0103",  # invalid-name
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]
